00 xxx 2006: 0.2.8 Miek <miek@miek.nl
   -- x --
   * Support -V in all scripts
   * Made ruby implemenation of mirror.sh: mirror.rb
   * Planning a diff based backup, don't move the file, but diff it
   

11 Apr 2006: 0.2.7 Miek <miek@miek.nl>
   -- bugfixes + restore features --
   * rdup: re-touch the timestamp file at the end. This way an interupted
     backup can be re-run because all the rdup files are still untouched.
   * rdup: really give an error on non-supported files
   * doc: update mirror.sh manpage: removed -z -k from the manual
   * doc: added gzip.sh, rorrim.sh and grep.sh manpage
   * yesterday.sh: work correctly with directories
   * yesterday.sh: replace backup directory with ...
   * hist.sh: print "d " for directories and replace the backup dir with ... 
   * gzip.sh: accept -d option: decompress
   * crypt.sh: accept -d option: decrypt
   * grep.sh: match files,links/directories. Install it by default
   Source dir layout:
   * rename tools -> sh-tools, there is room for scripts in other languages
   * rename restore -> sh-restore, room for other languages
   Porting:
   * mirror.sh/rorrim.sh: use cp -RP (works on FreeBSD) 
    (ghostcorps (at) gmail.com)
   * mirror.sh/hist.sh/yesterday.sh: use $OSTYPE to ease portability
   * hist.sh/yesterday.sh: use freebsd's date and some ls foo
   * yesterday.sh: use shell code to mimic 'seq'
   Restore:
   * Added rorrim.sh (this was restore.sh) - restore files to a dir
   * Added monthday.sh - select files to restore
     [still only lightly tested, please help test]
   

30 Mar 2006: 0.2.6 Miek <miek@miek.nl>
   -- script updates and bugfixes --
   * more signal handling was added to the shell scripts, 
     they now echo what file they were processing when 
     they received the signal
   * mirror.sh: actually accept -v as an option
   * mirror.sh: handle filetype changes better 
   * usb-dump.sh: display (zenity) progress dialog when backing up
     moved usb-dump.sh to tools/