@@ -83,6 +83,11 @@ Delimit \fBfilelist\fR with NULL's instead of a newline. Use '\\0' in the
 .TP
 .B \-x
 Stay on the local filesystem.
+.B \-q
+Quote backslashes in filenames. As the output of rdup is send to shell
+scripts it is necessary to quote backslashes, i.e. \\ -> \\\\. Note this
+also increases the pathsize with the amount of backslashes found.
+
 
 .SH BACKUPS
 With:
